# VideoPlayer

./: .gitignore  CMakeLists.txt
src/: main.c
